tests/fixtures/invalid/unterminated_block_comment.c
int main() {
    int value = 1;
    /* unterminated block comment
    value = 99;
    return value;
}
